src/objects/plus__c.object
<CustomObject>
    <fields>
        <fullName>Customers__c</fullName>
        <label>Customers</label>
        <referenceTo>Customers__c</referenceTo>
        <relationshipLabel>plus number Balance</relationshipLabel>
        <relationshipName>plus_number_Balance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plus_number__c</fullName>
        <label>plus_number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reference_type__c</fullName>
        <label>reference_type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>plus number Balance</label>
    <nameField>
        <label>plus number Balances Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>plus number Balance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>